--- a/code/Makefile
+++ b/code/Makefile
@@ -1,12 +1,23 @@
 LDFLAGS = -L/usr/local/lib
 
 LIBS = -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_mixer
-DEPS = LTexture.o LTimer.o dot.o
+DEPS = LTexture.o LTimer.o dot.o LWindow.o
 
-CFLAGS = $(shell sdl2-config --cflags)
+CFLAGS = $(shell sdl2-config --cflags) -g
+
+SOURCES=testLWindow.c
+OBJECTS=$(SOURCES:.c=.o)
+EXECUTABLE=sdltut20
+
+all: $(SOURCES) $(EXECUTABLE) $(DEPS)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c -o $@ $^
 
-sdl_tut20: sdl_tut20.o $(DEPS)
+$(EXECUTABLE): $(OBJECTS) $(DEPS)
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS) $(LIBS)
+
+.PHONY: clean
+
+clean:
+	rm -f $(OBJECTS) $(EXECUTABLE)
