--- a/code/Makefile
+++ b/code/Makefile
@@ -1,9 +1,10 @@
 LDFLAGS = -L/usr/local/lib
 
 LIBS = -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_mixer
-DEPS = LTexture.o LTimer.o dot.o LWindow.o
+DEPS = LTexture.o LTimer.o dot.o LWindow.o LPrints.o
 
-CFLAGS = $(shell sdl2-config --cflags) -g
+CFLAGS = $(shell sdl2-config --cflags) -g -D__DEBUG__  # -g enables interactive debugging
+# remove -D__DEBUG__ for release
 
 SOURCES=testLWindow.c
 OBJECTS=$(SOURCES:.c=.o)
