Got Dot working again, got a start on making the particle engine; probably the next thing should be an asset manager

--- a/code/Makefile
+++ b/code/Makefile
@@ -1,12 +1,12 @@
 LDFLAGS = -L/usr/local/lib
 
 LIBS = -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_mixer
-DEPS = LTexture.o LTimer.o LWindow.o LPrints.o
+DEPS = LTexture.o LTimer.o LWindow.o LPrints.o dot.o
 
 CFLAGS = $(shell sdl2-config --cflags) -g -D__DEBUG__  # -g enables interactive debugging
 # remove -D__DEBUG__ for release
 
-SOURCES=testLTexture.c
+SOURCES=testParticle.c
 OBJECTS=$(SOURCES:.c=.o)
 EXECUTABLE=sdltut20
 
